--- a/src/turma.html
+++ b/src/turma.html
@@ -55,6 +55,44 @@
       </div>
     </section>
 
+    <!--sessão sobre-->
+    <section class="about" id="about">
+      <div class="max-width">
+        <h2 class="title">Sobre</h2>
+        <div class="about-content">
+          <div class="column left">
+            <img
+              class="img1"
+              src="modules/imagens/img-1.png"
+              alt="Caio Ornleas"
+            />
+          </div>
+          <div class="column right">
+            <div class="text" id="txt1">
+              Quem sou eu, e como cheguei até aqui?
+            </div>
+            <p id="descrincao1">
+              Muito prazer eu sou Caio Ornelas, tenho 17 anos, moro em
+              Maringá-PR. meu primeiro contato com a programação foi em 2016,
+              com os meus dois tios, eles são programadores a muito tempo, nessa
+              época eles me compraram um curso para eu aprender também a
+              trabalhar no ramo, pois eu gostava muito, porém só em 2023 que
+              consegui dar continuidade nos estudos para desenvolver front-end,
+              com JavaScript, CSS3 e HTML5. E estou estudando para desenvolver
+              back-end com node.js.
+            </p>
+            <div id="btncurriculo">
+              <a
+                href="https://drive.google.com/file/d/1YxzaKFRsndPE5oo4eyWg926hKiFhuq4L/view?usp=share_link"
+                class="botoes"
+                >Download Curriculo</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="../codes/turma.js"></script>
   </body>
 </html>
