--- a/src/turma.html
+++ b/src/turma.html
@@ -14,7 +14,9 @@
     <div class="navbar">
       <div class="max-width">
         <div class="logo">
-          <a href="#">TURMA<span> 2°B</span></a>
+          <a href="#"
+            >TURMA<span> <strong>2°B</strong></span></a
+          >
         </div>
         <ul class="menu">
           <li><a href="#home">Inicio</a></li>
@@ -61,37 +63,53 @@
         <h2 class="title">Sobre</h2>
         <div class="about-content">
           <div class="column left">
-            <img
-              class="img1"
-              src="modules/imagens/img-1.png"
-              alt="Caio Ornleas"
-            />
+            <img class="img1" src="../public/2b.png" alt="Turma B" />
           </div>
           <div class="column right">
-            <div class="text" id="txt1">
-              Quem sou eu, e como cheguei até aqui?
-            </div>
+            <div class="text" id="txt1">Quem somos?</div>
             <p id="descrincao1">
-              Muito prazer eu sou Caio Ornelas, tenho 17 anos, moro em
-              Maringá-PR. meu primeiro contato com a programação foi em 2016,
-              com os meus dois tios, eles são programadores a muito tempo, nessa
-              época eles me compraram um curso para eu aprender também a
-              trabalhar no ramo, pois eu gostava muito, porém só em 2023 que
-              consegui dar continuidade nos estudos para desenvolver front-end,
-              com JavaScript, CSS3 e HTML5. E estou estudando para desenvolver
-              back-end com node.js.
+              Mais conhecidos com Turma 2°B, somos também a turma de exatas mais
+              lotada da escola, entretando isso não faz de nós uma turma ruim,
+              mas sim uma turma com diversos conhecimentos diferentes, várias
+              formas diferentes de aprender algo novo, isso faz de nós ótimos
+              companheiros, porém mesmo tão diferentes, temos algo em comum,
+              todos queremos ser bem sucedidos, por isso estamos aqui...
             </p>
             <div id="btncurriculo">
               <a
                 href="https://drive.google.com/file/d/1YxzaKFRsndPE5oo4eyWg926hKiFhuq4L/view?usp=share_link"
                 class="botoes"
-                >Download Curriculo</a
+                >Ver Turma Completa</a
               >
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <!--Turma Completa-->
+    <Section id="turma" class="turma">
+      <h2>Turma Completa</h2>
+      <div class="column">
+        <div class="card">
+          <img src="" />
+          <div class="tittle">
+          <h3>Caio Ornelas<h3>
+          </div>
+            <div class="description">
+            <div class="sobre">
+              <p>sou jlagjljjg
+              gklça
+              </p>
+          </div>
+          <div class="subtittle">
+            <h4>E-mail:<h4>
+          </div>
+            </div>
+            <Button><a>WhatsApp</a></Button>
+          
+        </div>
+    </Section>
 
     <script src="../codes/turma.js"></script>
   </body>
