atualização do site completo

--- a/src/turma.html
+++ b/src/turma.html
@@ -68,7 +68,10 @@
           <div class="column right">
             <div class="text" id="txt1">Quem somos?</div>
             <p id="descrincao1">
-              Mais conhecidos com Turma 2°B, somos também a turma de exatas mais
+              Somos uma turma do C. E. Painçandu, que veio chamando muita atenção da 
+              sua região pelos seus cursos profisionalizantes de programação, 
+              róbotica e empreendedorismo. Nossa turma e conhecida como a Turma 
+              2°B, somos também a turma de exatas mais
               lotada da escola, entretando isso não faz de nós uma turma ruim,
               mas sim uma turma com diversos conhecimentos diferentes, várias
               formas diferentes de aprender algo novo, isso faz de nós ótimos
