--- a/src/turma.html
+++ b/src/turma.html
@@ -204,33 +204,6 @@
                 </div>
               </div>
 
-              <!--card 5-->
-            <div class="card">
-              <img src="../students/semfoto.png" />
-              <div class="content">
-              <div class="tittle">
-              <h3>Alan Moreto<h3>
-              </div>
-                <div class="description">
-                <div class="sobre">
-                  <p>Futura estilista <br />
-                  </p>
-                  <h4>Idade:</h4>
-                  <p>
-                    16 anos
-                  </p>
-                  <h4>E-mail:</h4>
-                  <p>
-                    camili.souza@escola.pr.gov.br
-                  </p>
-              </div>
-                </div>
-                <div class="button">
-                <Button><a>WhatsApp</a></Button>
-                </div>
-                </div>
-              </div>
-
               <!--card 6-->
             <div class="card">
               <img src="../students/semfoto.png" />
@@ -645,7 +618,9 @@
               </div>
                 <div class="description">
                 <div class="sobre">
-                  <p>Futura estilista <br />
+                  <p>Gosto de treinar, dormir, amo <br />
+                    crepúsculo e sou viciada em<br />
+                    harry styles.
                   </p>
                   <h4>Idade:</h4>
                   <p>
@@ -672,7 +647,8 @@
               </div>
                 <div class="description">
                 <div class="sobre">
-                  <p>Futura estilista <br />
+                  <p>Amo treinar, academia,<br />
+                    e dormir...
                   </p>
                   <h4>Idade:</h4>
                   <p>
@@ -692,14 +668,15 @@
 
               <!--card 23-->
             <div class="card">
-              <img src="../students/semfoto.png" />
+              <img src="../students/mariaeloisa.png" />
               <div class="content">
               <div class="tittle">
               <h3>Maria Eloisa<h3>
               </div>
                 <div class="description">
                 <div class="sobre">
-                  <p>Futura estilista <br />
+                  <p>Gosto de jogar beach tennis e <br />
+                    vôlei, e gosto de marketing.
                   </p>
                   <h4>Idade:</h4>
                   <p>
