--- a/src/agenda.html
+++ b/src/agenda.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Criadores</title>
-    <link rel="stylesheet" href="../codes/criadores.css" />
+    <title>Em Breve...</title>
+    <link rel="stylesheet" href="../codes/agenda.css" />
     <link
       rel="shortcut icon"
       href="../public/favicon.ico"
@@ -25,7 +25,6 @@
         </div>
         <ul class="menu">
           <li><a href="#home">Inicio</a></li>
-          <li><a href="../src/criadores.html">Criadores</a></li>
           <li><a href="../src/turmacompleta.html">Turma Completa</a></li>
           <li><a href="#">Agenda da Turma</a></li>
         </ul>
@@ -35,18 +34,11 @@
       </div>
     </div>
 
-    <!--Criadores-->
-    <div class="columnone">
-      <div class="columnleft"></div>
-      <div class="columnright"></div>
+    <!--Em Breve-->
+    <div class="breve">
+      <h2>Página em Desenvolvimento...</h2>
     </div>
 
-    <div class="columntwo"></div>
-
-    <div class="columnthree"></div>
-
-    <div class="columnfour"></div>
-
-    <script src="../codes/criadores.js"></script>
+    <script src="../codes/agenda.js"></script>
   </body>
 </html>
