--- a/src/agenda.html
+++ b/src/agenda.html
@@ -24,7 +24,7 @@
           >
         </div>
         <ul class="menu">
-          <li><a href="#home">Inicio</a></li>
+          <li><a href="../src/turma.html">Inicio</a></li>
           <li><a href="../src/turmacompleta.html">Turma Completa</a></li>
           <li><a href="#">Agenda da Turma</a></li>
         </ul>
