--- a/src/turmacompleta.html
+++ b/src/turmacompleta.html
@@ -22,7 +22,7 @@
           <ul class="menu">
             <li><a href="../src/turma.html">Inicio</a></li>
             <li><a href="#turma">Turma Completa</a></li>
-            <li><a href="#">Agenda da Turma</a></li>
+            <li><a href="../src/agenda.html">Agenda da Turma</a></li>
           </ul>
           <div class="menu-btn">
             <ion-icon name="menu-outline"></ion-icon>
