titula da turma

--- a/src/turma.html
+++ b/src/turma.html
@@ -38,7 +38,7 @@
           <div class="text-2">A turma do 2°B</div>
           <div class="text-3">
             <p>
-              Olá, muito prazer, somos o 2°B do colégio paiçandu, durante o
+              Oi, muito prazer, somos o 2°B do colégio paiçandu, durante o
               ano<br />
               de 2023. Somos conhecidos como os gênios, pois somos da área de
               exatas.
