correção da turma

--- a/src/agenda.html
+++ b/src/agenda.html
@@ -20,7 +20,7 @@
       <div class="max-width">
         <div class="logo">
           <a href="#"
-            >TURMA<span> <strong>2°B</strong></span></a
+            >TURMA<span> <strong>2°F</strong></span></a
           >
         </div>
         <ul class="menu">
