--- a/src/turma.html
+++ b/src/turma.html
@@ -16,7 +16,7 @@
       <div class="max-width">
         <div class="logo">
           <a href="#"
-            >TURMA<span> <strong>2°B</strong></span></a
+            >TURMA<span> <strong>2°F</strong></span></a
           >
         </div>
         <ul class="menu">
@@ -35,10 +35,10 @@
       <div class="max-width">
         <div class="home-content">
           <div class="text-1">Olá, Seja Bem-Vindo(a)</div>
-          <div class="text-2">A turma do 2°B</div>
+          <div class="text-2">A turma do 2°F</div>
           <div class="text-3">
             <p>
-              Oi, muito prazer, somos o 2°B do colégio paiçandu, durante o
+              Oi, muito prazer, somos o 2°F do colégio paiçandu, durante o
               ano<br />
               de 2023. Somos conhecidos como os gênios, pois somos da área de
               exatas.
