--- a/src/turmacompleta.html
+++ b/src/turmacompleta.html
@@ -16,7 +16,7 @@
         <div class="max-width">
           <div class="logo">
             <a href="#"
-              >TURMA<span> <strong>2°B</strong></span></a
+              >TURMA<span> <strong>2°F</strong></span></a
             >
           </div>
           <ul class="menu">
