--- a/src/turma.html
+++ b/src/turma.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Turma 2°F</title>
+    <title>Turma 3°E</title>
     <link rel="stylesheet" href="../codes/turma.css" />
     <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon">
   </head>
@@ -16,7 +16,7 @@
       <div class="max-width">
         <div class="logo">
           <a href="#"
-            >TURMA<span> <strong>2°F</strong></span></a
+            >TURMA<span> <strong>3°E</strong></span></a
           >
         </div>
         <ul class="menu">
@@ -35,12 +35,12 @@
       <div class="max-width">
         <div class="home-content">
           <div class="text-1">Olá, Seja Bem-Vindo(a)</div>
-          <div class="text-2">A turma do 2°F</div>
+          <div class="text-2">A turma do 3°E</div>
           <div class="text-3">
             <p>
-              Oi, muito prazer, somos o 2°F do colégio paiçandu, durante o
+              Oi, muito prazer, somos o 3°E do colégio paiçandu, durante o
               ano<br />
-              de 2023. Somos conhecidos como os gênios, pois somos da área de
+              de 2024. Somos conhecidos como os gênios, pois somos da área de
               exatas.
             </p>
           </div>
@@ -63,7 +63,7 @@
         <h2 class="title">Sobre</h2>
         <div class="about-content">
           <div class="column left">
-            <img class="img1" src="../public/2b.png" alt="Turma B" />
+            <img class="img1" src="../public/3e.jpeg" alt="Turma E" />
           </div>
           <div class="column right">
             <div class="text" id="txt1">Quem somos?</div>
@@ -71,7 +71,7 @@
               Somos uma turma do C. E. Painçandu, que veio chamando muita atenção da 
               sua região pelos seus cursos profisionalizantes de programação, 
               róbotica e empreendedorismo. Nossa turma e conhecida como a Turma 
-              2°B, somos também a turma de exatas mais
+              3°F, somos também a turma de exatas mais
               lotada da escola, entretando isso não faz de nós uma turma ruim,
               mas sim uma turma com diversos conhecimentos diferentes, várias
               formas diferentes de aprender algo novo, isso faz de nós ótimos
