--- a/src/turma.html
+++ b/src/turma.html
@@ -96,7 +96,7 @@
       <div class="column">
         <!--card 1-->
         <div class="card">
-          <img src="../students/caioornelas.png" />
+          <img src="../students/semfoto.png" />
           <div class="content">
           <div class="tittle">
           <h3>Caio Ornelas<h3>
