--- a/src/turma.html
+++ b/src/turma.html
@@ -128,7 +128,7 @@
               </div>
                 <div class="description">
                 <div class="sobre">
-                  <p>Gosto mais de moto do que de mulher...
+                  <p>Gosto mais de moto
                   </p>
                   <h4>Idade:</h4>
                   <p>
@@ -177,8 +177,7 @@
               </div>
                 <div class="description">
                 <div class="sobre">
-                  <p>Gosto de jogar, e ganhar dinheiro para
-                    atingir meus objetivos!<br />
+                  <p>Gosto de jogar!<br />
                     
                   </p>
                   <h4>Idade:</h4>
