--- a/src/turma.html
+++ b/src/turma.html
@@ -136,7 +136,7 @@
                   </p>
                   <h4>E-mail:</h4>
                   <p>
-                    jackson.mansori@escola.pr.gov.br
+                    jackson@escola.pr.gov.br
                   </p>
               </div>
             </div>
